@@ -1,3 +1,7 @@
+2005-11-05 Perry
+ PATCH: [ 1337905 ] Allow comparing binary files with binary unpacker
+  Src: DirView.cpp
+
 2005-11-04 Perry
  PATCH: [ 1335072 ] Add text to Plugins.txt to cover DisplayXMLFiles
   Plugins/dlls: Plugins.txt
